// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack envs given: [case1] repo with multi-env keyrack.yml (prod + prep) when: [t0] unlock without --env then: stdout matches snapshot 1`] = `
"
"
`;

exports[`keyrack envs given: [case1] repo with multi-env keyrack.yml (prod + prep) when: [t1] get --for repo without --env then: stdout matches snapshot 1`] = `""`;

exports[`keyrack envs given: [case1] repo with multi-env keyrack.yml (prod + prep) when: [t2] get --for repo --json without --env then: stdout matches snapshot 1`] = `""`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t0.5] unlock prep then get --for repo --env prep --json then: stdout matches snapshot 1`] = `
[
  {
    "grant": {
      "env": "prep",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "sk-shared-prep-xyz789",
      },
      "org": "testorg",
      "slug": "testorg.prep.SHARED_API_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "grant": {
      "env": "prep",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "testorg.prep",
      },
      "org": "testorg",
      "slug": "testorg.prep.AWS_PROFILE",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
]
`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t0] get --for repo --env prep --json (without unlock) then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env prep --key SHARED_API_KEY",
    "message": "credential 'testorg.prep.SHARED_API_KEY' is locked. unlock it first.",
    "slug": "testorg.prep.SHARED_API_KEY",
    "status": "locked",
  },
  {
    "fix": "rhx keyrack unlock --env prep --key AWS_PROFILE",
    "message": "credential 'testorg.prep.AWS_PROFILE' is locked. unlock it first.",
    "slug": "testorg.prep.AWS_PROFILE",
    "status": "locked",
  },
]
`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t1.5] unlock prod then get --for repo --env prod --json then: stdout matches snapshot 1`] = `
[
  {
    "grant": {
      "env": "prod",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "sk-shared-prod-abc123",
      },
      "org": "testorg",
      "slug": "testorg.prod.SHARED_API_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "grant": {
      "env": "prod",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "testorg.prod",
      },
      "org": "testorg",
      "slug": "testorg.prod.AWS_PROFILE",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
]
`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t1] get --for repo --env prod --json (without unlock) then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env prod --key SHARED_API_KEY",
    "message": "credential 'testorg.prod.SHARED_API_KEY' is locked. unlock it first.",
    "slug": "testorg.prod.SHARED_API_KEY",
    "status": "locked",
  },
  {
    "fix": "rhx keyrack unlock --env prod --key AWS_PROFILE",
    "message": "credential 'testorg.prod.AWS_PROFILE' is locked. unlock it first.",
    "slug": "testorg.prod.AWS_PROFILE",
    "status": "locked",
  },
]
`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t2] unlock all then get --for repo --env all --json then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env all --key SHARED_API_KEY",
    "message": "credential 'testorg.all.SHARED_API_KEY' is locked. unlock it first.",
    "slug": "testorg.all.SHARED_API_KEY",
    "status": "locked",
  },
  {
    "grant": {
      "env": "prod",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "sk-shared-prod-abc123",
      },
      "org": "testorg",
      "slug": "testorg.prod.SHARED_API_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "grant": {
      "env": "prod",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "testorg.prod",
      },
      "org": "testorg",
      "slug": "testorg.prod.AWS_PROFILE",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "grant": {
      "env": "prep",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "sk-shared-prep-xyz789",
      },
      "org": "testorg",
      "slug": "testorg.prep.SHARED_API_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "grant": {
      "env": "prep",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "testorg.prep",
      },
      "org": "testorg",
      "slug": "testorg.prep.AWS_PROFILE",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
]
`;

exports[`keyrack envs given: [case2] repo with multi-env and os.direct vault configured when: [t3] get --for repo --env prep (human readable, without unlock) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.prep.SHARED_API_KEY
   │  ├─ status: locked 🔒
   │  └─ [2mtip: rhx keyrack unlock --env prep --key SHARED_API_KEY[0m
   └─ testorg.prep.AWS_PROFILE
      ├─ status: locked 🔒
      └─ [2mtip: rhx keyrack unlock --env prep --key AWS_PROFILE[0m

"
`;

exports[`keyrack envs given: [case3.5] raw key name resolution with --key when: [t0] get --key AWS_PROFILE without --env (defaults to env=all) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key AWS_PROFILE --env all --vault aws.iam.sso",
  "message": "credential 'testorg.all.AWS_PROFILE' not found in repo manifest (keyrack.yml)",
  "slug": "testorg.all.AWS_PROFILE",
  "status": "absent",
}
`;

exports[`keyrack envs given: [case3.5] raw key name resolution with --key when: [t1.5] unlock prep then get --key AWS_PROFILE --env prep then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "prep",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "testorg.prep",
    },
    "org": "testorg",
    "slug": "testorg.prep.AWS_PROFILE",
    "source": {
      "mech": "REPLICA",
      "vault": "os.daemon",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack envs given: [case3] raw key name export via single key get when: [t0.5] unlock prep then get --key testorg.prep.AWS_PROFILE --json then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "prep",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "testorg.prep",
    },
    "org": "testorg",
    "slug": "testorg.prep.AWS_PROFILE",
    "source": {
      "mech": "REPLICA",
      "vault": "os.daemon",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack envs given: [case3] raw key name export via single key get when: [t0] get --key testorg.prep.AWS_PROFILE --json (without unlock) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack unlock --env prep --key AWS_PROFILE",
  "message": "credential 'testorg.prep.AWS_PROFILE' is locked. unlock it first.",
  "slug": "testorg.prep.AWS_PROFILE",
  "status": "locked",
}
`;

exports[`keyrack envs given: [case3] raw key name export via single key get when: [t1] get --key testorg.prep.AWS_PROFILE (human readable, without unlock) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.prep.AWS_PROFILE
      ├─ status: locked 🔒
      └─ [2mtip: rhx keyrack unlock --env prep --key AWS_PROFILE[0m

"
`;

exports[`keyrack envs given: [case4.5] set+get roundtrip with os.secure vault when: [t2] unlock then get SECURE_API_KEY (full roundtrip) then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "encrypted",
      },
      "secret": "portable-secure-value-xyz789",
    },
    "org": "testorg",
    "slug": "testorg.test.SECURE_API_KEY",
    "source": {
      "mech": "REPLICA",
      "vault": "os.daemon",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack envs given: [case5] unlock with env filter when: [t0] unlock --env prep then: stdout matches snapshot 1`] = `
"

🔓 keyrack unlock
   ├─ testorg.prep.SHARED_API_KEY
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ vault: os.direct
   │  └─ expires in: 540m
   └─ testorg.prep.AWS_PROFILE
      ├─ env: prep
      ├─ org: testorg
      ├─ vault: os.direct
      └─ expires in: 540m

"
`;

exports[`keyrack envs given: [case5] unlock with env filter when: [t1] unlock --env all then: stdout matches snapshot 1`] = `
"

🔓 keyrack unlock
   ├─ testorg.prod.SHARED_API_KEY
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ vault: os.direct
   │  └─ expires in: 540m
   ├─ testorg.prod.AWS_PROFILE
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ vault: os.direct
   │  └─ expires in: 540m
   ├─ testorg.prep.SHARED_API_KEY
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ vault: os.direct
   │  └─ expires in: 540m
   └─ testorg.prep.AWS_PROFILE
      ├─ env: prep
      ├─ org: testorg
      ├─ vault: os.direct
      └─ expires in: 540m

"
`;

exports[`keyrack envs given: [case6] set with org mismatch when: [t0] set --key AWS_PROFILE --org foreign-org --json then: stdout matches snapshot 1`] = `""`;

exports[`keyrack envs given: [case6] set with org mismatch when: [t1] set --key AWS_PROFILE --org @this (valid match) then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "prod",
  "exid": null,
  "maxDuration": null,
  "mech": "REPLICA",
  "org": "testorg",
  "slug": "testorg.prod.AWS_PROFILE",
  "updatedAt": "__TIMESTAMP__",
  "vault": "os.direct",
  "vaultRecipient": null,
}
`;

exports[`keyrack envs given: [case7] repo with old flat keys: format when: [t0] get --for repo --json then: stdout matches snapshot 1`] = `""`;

exports[`keyrack envs given: [case7] repo with old flat keys: format when: [t1] unlock then: stdout matches snapshot 1`] = `
"
"
`;

exports[`keyrack envs given: [case8] list with multi-env repo when: [t0] keyrack list then: stdout matches snapshot 1`] = `
"
🔐 keyrack list
   ├─ testorg.prep.AWS_PROFILE
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   ├─ testorg.prep.SHARED_API_KEY
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   ├─ testorg.prod.AWS_PROFILE
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   └─ testorg.prod.SHARED_API_KEY
      ├─ env: prod
      ├─ org: testorg
      ├─ mech: REPLICA
      └─ vault: os.direct
"
`;
